# corfu

./: .gitignore  README.rst  corfu.py  setup.cfg  setup.py
docs/: conf.py  index.rst  reference.rst  results.rst  theory.bib  theory.rst  usage.rst
docs/_templates/: links.html
docs/results/: ptoxi.py
notebooks/: test_corfu.ipynb
