[metadata]
name = corfu
version = attr: corfu.__version__
author = attr: corfu.__author__
author_email = attr: corfu.__email__
description = projected angular correlation functions
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE.txt
url = https://github.com/ntessore/corfu
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    numpy
    scipy

[options.extras_require]
docs =
    sphinxcontrib.bibtex
    matplotlib
